--- a/test/hscss/simple.css
+++ b/test/hscss/simple.css
@@ -1,7 +1,7 @@
 body {
 	background: red;
 	border: 1px solid rgba(255, 0, 255, 0.5);
-	font: "Times New Roman", serif;
+	font: 100%/1.5 "Times New Roman", serif;
 	color: #000;
 }
 
@@ -15,4 +15,10 @@ main {
 
 body > footer {
 	background: pink;
+}
+
+.foo {
+	background: url(/images/fuzzy-kitten.png) center center / cover, pink;
+	border-radius: 13em/3em;
+	box-shadow: inset 0 0 1em gold, 0 0 1em red;
 }
